src/test/ui/compile-fail-migration/borrowck/borrowck-unary-move.mir.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/borrowck-unary-move.rs:17:10
   |
LL |     let y = &*x;
   |             --- borrow of `*x` occurs here
LL |     free(x); //[ast]~ ERROR cannot move out of `x` because it is borrowed
   |          ^ move out of `x` occurs here
LL |     //[mir]~^ ERROR cannot move out of `x` because it is borrowed
LL |     *y
   |     -- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
